--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -146,6 +146,13 @@ android {
         }
     }
     signingConfigs {
+        release {
+            storeFile file('spotify.keystore')
+            storePassword '123456'
+            keyAlias 'spotifykey'
+            keyPassword '123456'
+        }
+
         debug {
             storeFile file('debug.keystore')
             storePassword 'android'
@@ -160,7 +167,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
@@ -181,6 +188,8 @@ android {
 
         }
     }
+
+    
 }
 
 dependencies {
