--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/slider": "^3.0.3",
     "@react-navigation/bottom-tabs": "^6.0.0",
+    "@react-navigation/drawer": "^6.1.3",
     "@react-navigation/native": "^6.0.0",
     "@react-navigation/native-stack": "^6.0.0",
     "react": "17.0.1",
